New topics for 2023 projects (#48)
* add slideshow of new topics

* update buttons for new posts and remove older

* change around the current events page to focus on posts

* make slideshow linked to pages

* move the archive of old posts

* change wording from articles to events

* move old version of post to draft

* add images and text content for scholarship proj

* add images and text content for wheelchair proj

* flood prone project images and content

* olapa project image and content

* fix divs

* solar images and content

* fix carousel name

* school expansion content, video, and images

* food images and content

* fix div end tags

* fix image display

* fixing image size for smaller display

* added olapa to partnerships

* fixed typo

--- a/_posts/2021-03-05-health-in-guatemala.html
+++ b/_posts/2021-03-05-health-in-guatemala.html
@@ -1,7 +1,8 @@
 ---
 layout: post
-title: Health in Ipala, Guatemala
+title: Health in Ipala, Guatemala [Archived]
 tags: guatemala, ipala, education, families, health, covid, relief, smokeless, stoves
+category: archived
 keywords: guatemala, ipala, education, families, health, covid, relief, smokeless, stoves
 author: billy
 ---
@@ -27,7 +28,7 @@ author: billy
                     <div class="media-body">
                         <div class="row">
                             <div class="container">
-                                <h4 class="mt-0">Health in Guatemala</h4>
+                                <h4 class="mt-0">{{ page.title }}</h4>
                                 <p>AEHCA Inc. has the ability to effect the conditions in which many
                                     of the poverty stricken families have to live in. The most in
                                     need are from the Indigenous population of Guatemala. 54% of the
@@ -139,4 +140,7 @@ author: billy
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
 </main>
