--- a/partnerships.html
+++ b/partnerships.html
@@ -47,8 +47,11 @@ link for that country. As the seeds are planted and begin to grow, you will see 
                   <p></p>
                   <li class="font-weight-bold">
                     Guatemala
-                    <ul class="font-weight-normal"><a class="text-info"
-                        href="/partnerships/guatemala/ipala.html">Ipala</a></ul>
+                    <ul class="font-weight-normal">-<a class="text-info" href="/partnerships/guatemala/ipala.html">
+                        Ipala</a>
+                    </ul>
+                    <ul class="font-weight-normal">- Olopa
+                    </ul>
                   </li>
                   <p></p>
                   <li class="font-weight-bold">Honduras</li>
