--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ partnerships with communities to build on their specific needs and existing reso
 specific focus during 2020 and 2021."
 ---
 <main role="main">
-  <!-- Modal -->
+  <!-- Modal
   <div class="modal fade" id="videoModal" tabindex="-1" aria-labelledby="videoModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-xl">
       <div class="modal-content">
@@ -24,10 +24,13 @@ specific focus during 2020 and 2021."
       </div>
     </div>
   </div>
-  <!-- end modal-->
+  end modal-->
   <div class="container-md">
     <br>
     <div class="jumbotron">
+      <p></p>
+      <p class="lead text-center">Association for Education and Health in Central America</p>
+      <hr class="my-4">
       <div class="container">
         <!-- Can use this as a template for various informational alerts we want to give out.. maybe for new posts that dont need to be main content -
         {% assign curMonth = site.time | date: "%m" %}
@@ -51,37 +54,243 @@ specific focus during 2020 and 2021."
           {% endif %}
         -->
         <!-- End of informational alerts-->
+        <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+        <div class="col">
+          <div id="frontPageCarousel" class="carousel slide">
+            <ol class="carousel-indicators">
+              <li data-target="#frontPageCarousel" data-slide-to="0" class="active"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="1"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="2"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="3"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="4"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="5"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="6"></li>
+              <li data-target="#frontPageCarousel" data-slide-to="7"></li>
+            </ol>
+            <div class="carousel-inner">
+              <div class="carousel-item active" data-interval="15000">
+                <video class="col rounded" muted autoplay playsinline loop alt="AEHCA Inc 2023 highlights">
+                  <source src="/videos/front_page_video_october.mp4" type="video/mp4">
+                </video>
+                <div class="carousel-caption d-none d-md-block">
+                  <p class="text-light bg-dark">AEHCA and its partners believe we each have a little of that light in us
+                    to share out into the world. 2023 has been an exciting year of sharing in Guatemala and we want you
+                    to know what's been happening! Click through this slideshow or on a button below to learn more.</p>
+                </div>
+                <div class="carousel-caption d-md-none">
+                  <p class="text-light bg-dark">Letting our light shine in Ipala Guatemala as we started moving out into
+                    more of Central America in 2023</p>
+                </div>
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                {% for post in site.posts %}
+                {% if post.title == "Solar-powered electricity is turning on the lights in rural Ipala" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/solar_project.jpeg" class="d-block w-100 rounded" alt="solar project">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">AEHCA and our partners are using solar-powered electricity to turn on
+                      the light in rural Ipala, Guatemala.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Solar-powered electricity is turning on the lights in rural Ipala</p>
+                  </div>
+                </a>
+                {% endif %}
+                {% endfor %}
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                {% for post in site.posts %}
+                {% if post.title == "Wheelchairs for the disabled AND their families too!" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/wheelchair_project.jpeg" class="d-block w-100 rounded" alt="wheelchair project">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">Wheelchair loan program: AEHCA’s helping to secure a more healthy
+                      lives
+                      for needy disabled people AND their families too!</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Wheelchairs for the disabled AND their families too!</p>
+                  </div>
+                </a>
+                {% endif %}
+                {% endfor %}
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                {% for post in site.posts %}
+                {% if post.title == "Building an additional classroom for Ipala’s diversificado (high school…kinda)" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/classroom_space_project.jpeg" class="d-block w-100 rounded"
+                    alt="Building classroom space project">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">Construction started for a new high school classroom. Neither
+                      COVID-19,
+                      nor inflation could ultimately stop us and our partner school IDEC from moving forward!
+                      Anticipated
+                      completion January 2024.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Construction starting at IDEC for the first of 2 new classrooms.</p>
+                  </div>
+                </a>
+                {% endif %}
+                {% endfor %}
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                {% for post in site.posts %}
+                {% if post.title == "Food relief moves beyond Covid-19 model" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/food_distribution_project.jpg" class="d-block w-100 rounded"
+                    alt="Food assistance Project">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">Food assistance needs changed significantly over the last year as
+                      COVID
+                      restrictions lifted and we’ve adjusted too. It’s clear now we need to concentrate on seniors while
+                      keeping our eyes and hearts open to other needs too – like among disabled persons.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Food relief moves beyond Covid-19 model.</p>
+                  </div>
+                </a>
+                {% endif %}
+                {% endfor %}
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                {% for post in site.posts %}
+                {% if post.title == "AEHCA Inc. expands into a new community - WELCOME Olopa, Guatemala" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/guatemala_growth.png" class="d-block w-100 rounded"
+                    alt="Growing outwards in Guatemala">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">2023 is the year we moved out into a second Guatemalan community. It's
+                      a
+                      huge move on its own, but also a big step towards starting work in other parts of Central America
+                      too. Our new partner committee is in Olopa, Guatemala near the Hondoran border. We are working
+                      together to start a scholarship program in January and then other projects later in 2024.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Expanding into a new location: Welcome Olopa, Guatemala!</p>
+                  </div>
+                  {% endif %}
+                  {% endfor %}
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                {% for post in site.posts %}
+                {% if post.title == "Securing flood prone community - Nueva Reforma" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/flood_project.jpeg" class="d-block w-100 rounded"
+                    alt="Securing flood prone community - Nueva Reforma">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk.</p>
+                  </div>
+                  {% endif %}
+                  {% endfor %}
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                {% for post in site.posts %}
+                {% if post.title == "Full Rollout of Our Post-secondary School Scholarship Program" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/scholarship_project.jpeg" class="d-block w-100 rounded"
+                    alt="Full realization of scholarship program">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">January 2024 will see full implementation of our scholarship program.
+                    </p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Full implementation of scholarship/financial aid program is almost
+                      here!
+                    </p>
+                  </div>
+                  {% endif %}
+                  {% endfor %}
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#frontPageCarousel" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#frontPageCarousel" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+          <!-- END PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+        </div>
         <div class="row">
-          <div class="card text-white container" style="background-color: #49b7e6">
-            <!-- Displays the wider video for devices with large or bigger screens -->
+
+          <!-- <div class="card text-white container" style="background-color: #49b7e6">
+          Displays the wider video for devices with large or bigger screens
+
             <video class="col d-none d-lg-block" muted autoplay playsinline loop>
               <source src="/videos/may_front_page_desktop_video.mp4" type="video/mp4">
             </video>
-            <!-- Displays the taller video for devices with smaller than large screens -->
+          Displays the taller video for devices with smaller than large screens
             <video class="col rounded d-lg-none" muted autoplay playsinline loop>
               <source src="/videos/may_front_page_mobile_video.mp4" type="video/mp4">
             </video>
-            <!-- Displays the wider image for devices with large or bigger screens -->
-            <!--<img src="/images/front-page-holiday-2022-horiz.jpg" class="card-img rounded d-none d-lg-block"
-              alt="AEHCA Inc. logo">-->
-            <!-- Displays the taller image for devices with smaller than large screens -->
-            <!--<img src="/images/front-page-holiday-2022.jpg" class="card-img rounded d-lg-none" alt="AEHCA Inc. logo">-->
-          </div>
+            
+          Displays the wider image for devices with large or bigger screens
+          <img src="/images/front-page-holiday-2022-horiz.jpg" class="card-img rounded d-none d-lg-block"
+              alt="AEHCA Inc. logo">
+          Displays the taller image for devices with smaller than large screens
+          <img src="/images/front-page-holiday-2022.jpg" class="card-img rounded d-lg-none" alt="AEHCA Inc. logo">
+          </div> -->
           <div class="card container mt-2" style="background-color: #49b7e6">
             <div class="card-body rounded d-flex justify-content-center">
               <div class="btn-group row flex-wrap text-center">
-                <button type="button" id="fp_button" class="btn btn-primary video-btn rounded-pill"
-                  data-bs-toggle="modal" data-tagVideo="/videos/scholarships.mp4" data-bs-target="#videoModal">
-                  Scholarships
-                </button>
-                <button type="button" id="fp_button" class="btn btn-warning video-btn rounded-pill mx-2"
-                  data-bs-toggle="modal" data-tagVideo="/videos/IDEC_building_project.mp4" data-bs-target="#videoModal">
-                  School Building
-                </button>
-                <button type="button" id="fp_button" class="btn btn-danger video-btn rounded-pill"
-                  data-bs-toggle="modal" data-tagVideo="/videos/covid-19_food_relief.mp4" data-bs-target="#videoModal">
-                  Emergency Food Relief
-                </button>
+                {% for post in site.posts %}
+                {% if post.title == "Solar-powered electricity is turning on the lights in rural Ipala" %}
+                <a href="{{ post.url }}"><button type="button" id="fp_button"
+                    class="btn btn-primary video-btn rounded-pill my-2">
+                    Solar
+                  </button>
+                </a>
+                {% endif %}
+                {% if post.title == "Wheelchairs for the disabled AND their families too!" %}
+                <a href="{{ post.url }}"><button type="button" id="fp_button"
+                    class="btn btn-warning video-btn rounded-pill mx-2 my-2">
+                    Wheelchairs
+                  </button>
+                </a>
+                {% endif %}
+                {% if post.title == "Building an additional classroom for Ipala’s diversificado (high school…kinda)" %}
+                <a href="{{ post.url }}"><button type="button" id="fp_button"
+                    class="btn btn-danger video-btn rounded-pill my-2">
+                    Classroom Space
+                  </button>
+                </a>
+                {% endif %}
+                {% if post.title == "Food relief moves beyond Covid-19 model" %}
+                <a href="{{ post.url }}"><button type="button" id="fp_button"
+                    class="btn btn-primary video-btn rounded-pill mx-2 my-2">
+                    Food Assistance
+                  </button>
+                </a>
+                {% endif %}
+                {% if post.title == "AEHCA Inc. expands into a new community - WELCOME Olopa, Guatemala" %}
+                <a href="{{ post.url }}"><button type="button" id="fp_button"
+                    class="btn btn-danger video-btn rounded-pill my-2">
+                    Olapa, Guatemala
+                  </button>
+                </a>
+                {% endif %}
+                {% if post.title == "Securing flood prone community - Nueva Reforma" %}
+                <a href="{{ post.url }}"><button type="button" id="fp_button"
+                    class="btn btn-warning video-btn rounded-pill ml-2 my-2">
+                    Flooding support
+                  </button>
+                </a>
+                {% endif %}
+                {% if post.title == "Full Rollout of Our Post-secondary School Scholarship Program" %}
+                <a href="{{ post.url }}"><button type="button" id="fp_button"
+                    class="btn btn-primary video-btn rounded-pill ml-2 my-2">
+                    Scholarships
+                  </button>
+                </a>
+                {% endif %}
+                {% endfor %}
               </div>
             </div>
           </div>
@@ -97,7 +306,7 @@ specific focus during 2020 and 2021."
           </p>
         </div>
       </div>
-      <hr class="my-4">
+      <!--<hr class="my-4">
       <div class="card-group">
         <div class="card text-center">
           {% for post in site.posts %}
@@ -135,7 +344,7 @@ specific focus during 2020 and 2021."
             </div>
             <img src="/images/health.jpg" class="card-img-top" alt="ipala health image">
         </div></a>
-      </div>
+      </div>-->
     </div>
   </div>
 </main>
