change wording of first front image and make give button larger

--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@ specific focus during 2020 and 2021."
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active" data-interval="15000">
-                <video class="col rounded" muted autoplay playsinline loop alt="AEHCA Inc 2023 highlights">
-                  <source src="/videos/front_page_video_october.mp4" type="video/mp4">
+                <video class="col rounded" muted autoplay playsinline alt="AEHCA Inc 2023 highlights">
+                  <source src="/videos/front_page.mp4" type="video/mp4">
                 </video>
                 <div class="carousel-caption d-none d-md-block">
-                  <p class="text-light bg-dark">AEHCA and its partners believe we each have a little of that light in us
-                    to share out into the world. 2023 has been an exciting year of sharing in Guatemala and we want you
-                    to know what's been happening! Click through this slideshow or on a button below to learn more.</p>
+                  <p class="text-light bg-dark">AEHCA and its partners believe we each have a little light in us
+                    to share out into the world. 2023 has been an exciting year of sharing in Guatemala and we want
+                    you to know what's been happening! Click through this slideshow or on a button below to learn more.
+                  </p>
                 </div>
                 <div class="carousel-caption d-md-none">
                   <p class="text-light bg-dark">Letting our light shine in Ipala Guatemala as we started moving out into
@@ -88,8 +89,8 @@ specific focus during 2020 and 2021."
                 <a href="{{ post.url }}">
                   <img src="/images/solar_project.jpeg" class="d-block w-100 rounded" alt="solar project">
                   <div class="carousel-caption d-none d-md-block">
-                    <p class="text-light bg-dark">AEHCA and our partners are using solar-powered electricity to turn on
-                      the light in rural Ipala, Guatemala.</p>
+                    <p class="text-light bg-dark">AEHCA and our partners are using solar-powered electricity to turn
+                      on the light in rural Ipala, Guatemala.</p>
                   </div>
                   <div class="carousel-caption d-md-none">
                     <p class="text-light bg-dark">Solar-powered electricity is turning on the lights in rural Ipala</p>
@@ -143,9 +144,8 @@ specific focus during 2020 and 2021."
                     alt="Food assistance Project">
                   <div class="carousel-caption d-none d-md-block">
                     <p class="text-light bg-dark">Food assistance needs changed significantly over the last year as
-                      COVID
-                      restrictions lifted and we’ve adjusted too. It’s clear now we need to concentrate on seniors while
-                      keeping our eyes and hearts open to other needs too – like among disabled persons.</p>
+                      COVID restrictions lifted and we’ve adjusted too. It’s clear now we need to concentrate on seniors
+                      while keeping our eyes and hearts open to other needs too – like among disabled persons.</p>
                   </div>
                   <div class="carousel-caption d-md-none">
                     <p class="text-light bg-dark">Food relief moves beyond Covid-19 model.</p>
@@ -161,11 +161,11 @@ specific focus during 2020 and 2021."
                   <img src="/images/guatemala_growth.png" class="d-block w-100 rounded"
                     alt="Growing outwards in Guatemala">
                   <div class="carousel-caption d-none d-md-block">
-                    <p class="text-light bg-dark">2023 is the year we moved out into a second Guatemalan community. It's
-                      a
-                      huge move on its own, but also a big step towards starting work in other parts of Central America
-                      too. Our new partner committee is in Olopa, Guatemala near the Hondoran border. We are working
-                      together to start a scholarship program in January and then other projects later in 2024.</p>
+                    <p class="text-light bg-dark">2023 is the year we moved out into a second Guatemalan community.
+                      It's a huge move on its own, but also a big step towards starting work in other parts of Central
+                      America too. Our new partner committee is in Olopa, Guatemala near the Hondoran border. We are
+                      working together to start a scholarship program in January and then other projects later in 2024.
+                    </p>
                   </div>
                   <div class="carousel-caption d-md-none">
                     <p class="text-light bg-dark">Expanding into a new location: Welcome Olopa, Guatemala!</p>
@@ -299,7 +299,7 @@ specific focus during 2020 and 2021."
       <hr class="my-4">
       <div class="container">
         <div class="col text-center">
-          <a class="btn-lg btn-info rounded-pill" href="/give" role="button">Give</a>
+          <a id="fp_button" class="btn-xl btn-danger rounded-pill" href="/give" role="button">Give</a>
           <p><br>
             By giving, you are contributing to the education and creating healthy living conditions in Central America
             communities.
