add where to send checks

--- a/give.html
+++ b/give.html
@@ -94,7 +94,7 @@ For easy service and to set up recurring payments, use our PayPal link."
 
                 <p></p>
                 -->
-                
+
                 <!-- Venmo donation button/link-->
                 <a class="btn btn-primary" style="background-color: #008DFF;"
                   href="https://venmo.com/code?user_id=3680842622698567741" role="button"><svg
@@ -110,6 +110,19 @@ For easy service and to set up recurring payments, use our PayPal link."
                   Donate via credit card
                 </button>
                 -->
+              </div>
+            </div>
+            <div class="row">
+              <div class="col text-center">
+                <br>
+                Make checks payable to:
+                <br>
+                <b>AEHCA Inc.</b>
+                <br>
+                Send to:
+                <br>
+                <b>6421 Autumn Gold Court</b> <br>
+                <b>Columbia, MD 21045</b>
               </div>
             </div>
             <hr class="my-4">
