--- a/index.html
+++ b/index.html
@@ -85,6 +85,23 @@ specific focus during 2020 and 2021."
               </div>
               <div class="carousel-item" data-interval="9000">
                 {% for post in site.posts %}
+                {% if post.title == "Securing flood prone community - Nueva Reforma" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/flood_project.jpeg" class="d-block w-100 rounded"
+                    alt="Securing flood prone community - Nueva Reforma">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk. Click
+                      on the image or the "Dry, Healthy Housing" button to learn more.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk. Click
+                      on the image or the "Dry, Healthy Housing" button to learn more.</p>
+                  </div>
+                  {% endif %}
+                  {% endfor %}
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                {% for post in site.posts %}
                 {% if post.title == "Solar-powered electricity is turning on the lights in rural Ipala" %}
                 <a href="{{ post.url }}">
                   <img src="/images/solar_project.jpeg" class="d-block w-100 rounded" alt="solar project">
@@ -175,21 +192,6 @@ specific focus during 2020 and 2021."
               </div>
               <div class="carousel-item" data-interval="9000">
                 {% for post in site.posts %}
-                {% if post.title == "Securing flood prone community - Nueva Reforma" %}
-                <a href="{{ post.url }}">
-                  <img src="/images/flood_project.jpeg" class="d-block w-100 rounded"
-                    alt="Securing flood prone community - Nueva Reforma">
-                  <div class="carousel-caption d-none d-md-block">
-                    <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk.</p>
-                  </div>
-                  <div class="carousel-caption d-md-none">
-                    <p class="text-light bg-dark">Working with Nueva Reforma neighborhood to reduce flooding risk.</p>
-                  </div>
-                  {% endif %}
-                  {% endfor %}
-              </div>
-              <div class="carousel-item" data-interval="9000">
-                {% for post in site.posts %}
                 {% if post.title == "Full Rollout of Our Post-secondary School Scholarship Program" %}
                 <a href="{{ post.url }}">
                   <img src="/images/scholarship_project.jpeg" class="d-block w-100 rounded"
@@ -251,7 +253,7 @@ specific focus during 2020 and 2021."
                 {% if post.title == "Wheelchairs for the disabled AND their families too!" %}
                 <a href="{{ post.url }}"><button type="button" id="fp_button"
                     class="btn btn-warning video-btn rounded-pill mx-2 my-2">
-                    Wheelchairs
+                    Health Supports
                   </button>
                 </a>
                 {% endif %}
@@ -278,8 +280,8 @@ specific focus during 2020 and 2021."
                 {% endif %}
                 {% if post.title == "Securing flood prone community - Nueva Reforma" %}
                 <a href="{{ post.url }}"><button type="button" id="fp_button"
-                    class="btn btn-warning video-btn rounded-pill ml-2 my-2">
-                    Flooding support
+                    class="btn btn-warning video-btn rounded-pill mx-2 my-2">
+                    Dry, Healthy Housing
                   </button>
                 </a>
                 {% endif %}
