add more info about recent events/priorities

--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@ specific focus during 2020 and 2021."
         -->
         <!-- End of informational alerts-->
         <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+        <div class="container bg-warning rounded mb-2 py-2">
+          One significant step forward toward insuring Ipaltecos of a dry, healthy home for all happened in
+          August. A community meeting organized by us, our partners in Ipala and Habitat for Humanity
+          International met to set priorities for storm water control and seek neighborhood input for things
+          needed to create a sustainable community in the coming years.
+        </div>
+
         <div class="col">
           <div id="frontPageCarousel" class="carousel slide">
             <ol class="carousel-indicators">
@@ -71,7 +78,8 @@ specific focus during 2020 and 2021."
               <div class="carousel-item active" data-interval="9000">
                 <img src="/images/wide-collage.jpeg" class="d-block w-100" alt="AEHCA Inc. logo">
                 <div class="carousel-caption d-none d-md-block">
-                  <p class="text-light bg-dark rounded">At AEHCA we believe each of us has a little light
+                  <p class="text-light bg-dark rounded">
+                    At AEHCA we believe each of us has a little light
                     to share out into the world. This last year has been filled with lots of new little lights getting
                     brighter and planning to turn on even more in the year ahead. Review our programs,
                     get updated on what's happened recently and some plans for the future.
