--- a/index.html
+++ b/index.html
@@ -55,6 +55,13 @@ specific focus during 2020 and 2021."
         -->
         <!-- End of informational alerts-->
         <!-- PHOTO CAROUSEL WITH BUTTONS AND CAPTIONS-->
+        <div class="container bg-warning rounded mb-2 py-2">
+          One significant step forward toward insuring Ipaltecos of a dry, healthy home for all happened in
+          August. A community meeting organized by us, our partners in Ipala and Habitat for Humanity
+          International met to set priorities for storm water control and seek neighborhood input for things
+          needed to create a sustainable community in the coming years.
+        </div>
+
         <div class="col">
           <div id="frontPageCarousel" class="carousel slide">
             <ol class="carousel-indicators">
@@ -68,19 +75,20 @@ specific focus during 2020 and 2021."
               <li data-target="#frontPageCarousel" data-slide-to="7"></li>
             </ol>
             <div class="carousel-inner">
-              <div class="carousel-item active" data-interval="15000">
-                <video class="col rounded" muted autoplay playsinline alt="AEHCA Inc 2023 highlights">
-                  <source src="/videos/front_page.mp4" type="video/mp4">
-                </video>
+              <div class="carousel-item active" data-interval="9000">
+                <img src="/images/wide-collage.jpeg" class="d-block w-100" alt="AEHCA Inc. logo">
                 <div class="carousel-caption d-none d-md-block">
-                  <p class="text-light bg-dark">AEHCA and its partners believe we each have a little light in us
-                    to share out into the world. 2023 has been an exciting year of sharing in Guatemala and we want
-                    you to know what's been happening! Click through this slideshow or on a button below to learn more.
+                  <p class="text-light bg-dark rounded">
+                    At AEHCA we believe each of us has a little light
+                    to share out into the world. This last year has been filled with lots of new little lights getting
+                    brighter and planning to turn on even more in the year ahead. Review our programs,
+                    get updated on what's happened recently and some plans for the future.
                   </p>
                 </div>
                 <div class="carousel-caption d-md-none">
-                  <p class="text-light bg-dark">Letting our light shine in Ipala Guatemala as we started moving out into
-                    more of Central America in 2023</p>
+                  <p class="text-light bg-dark rounded">This last year has been filled with lots of new little lights
+                    getting
+                    brighter and planning to turn on even more in the year ahead.</p>
                 </div>
               </div>
               <div class="carousel-item" data-interval="9000">
@@ -106,11 +114,13 @@ specific focus during 2020 and 2021."
                 <a href="{{ post.url }}">
                   <img src="/images/solar_project.jpeg" class="d-block w-100 rounded" alt="solar project">
                   <div class="carousel-caption d-none d-md-block">
-                    <p class="text-light bg-dark">AEHCA and our partners are using solar-powered electricity to turn
+                    <p class="text-light bg-dark rounded">AEHCA and our partners are using solar-powered electricity to
+                      turn
                       on the light in rural Ipala, Guatemala.</p>
                   </div>
                   <div class="carousel-caption d-md-none">
-                    <p class="text-light bg-dark">Solar-powered electricity is turning on the lights in rural Ipala</p>
+                    <p class="text-light bg-dark rounded">Solar-powered electricity is turning on the lights in rural
+                      Ipala</p>
                   </div>
                 </a>
                 {% endif %}
@@ -122,12 +132,13 @@ specific focus during 2020 and 2021."
                 <a href="{{ post.url }}">
                   <img src="/images/wheelchair_project.jpeg" class="d-block w-100 rounded" alt="wheelchair project">
                   <div class="carousel-caption d-none d-md-block">
-                    <p class="text-light bg-dark">Wheelchair loan program: AEHCA’s helping to secure a more healthy
+                    <p class="text-light bg-dark rounded">Wheelchair loan program: AEHCA’s helping to secure a more
+                      healthy
                       lives
                       for needy disabled people AND their families too!</p>
                   </div>
                   <div class="carousel-caption d-md-none">
-                    <p class="text-light bg-dark">Wheelchairs for the disabled AND their families too!</p>
+                    <p class="text-light bg-dark rounded">Wheelchairs for the disabled AND their families too!</p>
                   </div>
                 </a>
                 {% endif %}
@@ -140,14 +151,15 @@ specific focus during 2020 and 2021."
                   <img src="/images/classroom_space_project.jpeg" class="d-block w-100 rounded"
                     alt="Building classroom space project">
                   <div class="carousel-caption d-none d-md-block">
-                    <p class="text-light bg-dark">Construction started for a new high school classroom. Neither
+                    <p class="text-light bg-dark rounded">Construction started for a new high school classroom. Neither
                       COVID-19,
                       nor inflation could ultimately stop us and our partner school IDEC from moving forward!
                       Anticipated
                       completion January 2024.</p>
                   </div>
                   <div class="carousel-caption d-md-none">
-                    <p class="text-light bg-dark">Construction starting at IDEC for the first of 2 new classrooms.</p>
+                    <p class="text-light bg-dark rounded">Construction starting at IDEC for the first of 2 new
+                      classrooms.</p>
                   </div>
                 </a>
                 {% endif %}
@@ -160,12 +172,13 @@ specific focus during 2020 and 2021."
                   <img src="/images/food_distribution_project.jpg" class="d-block w-100 rounded"
                     alt="Food assistance Project">
                   <div class="carousel-caption d-none d-md-block">
-                    <p class="text-light bg-dark">Food assistance needs changed significantly over the last year as
+                    <p class="text-light bg-dark rounded">Food assistance needs changed significantly over the last year
+                      as
                       COVID restrictions lifted and we’ve adjusted too. It’s clear now we need to concentrate on seniors
                       while keeping our eyes and hearts open to other needs too – like among disabled persons.</p>
                   </div>
                   <div class="carousel-caption d-md-none">
-                    <p class="text-light bg-dark">Food relief moves beyond Covid-19 model.</p>
+                    <p class="text-light bg-dark rounded">Food relief moves beyond Covid-19 model.</p>
                   </div>
                 </a>
                 {% endif %}
@@ -178,14 +191,32 @@ specific focus during 2020 and 2021."
                   <img src="/images/guatemala_growth.png" class="d-block w-100 rounded"
                     alt="Growing outwards in Guatemala">
                   <div class="carousel-caption d-none d-md-block">
-                    <p class="text-light bg-dark">2023 is the year we moved out into a second Guatemalan community.
+                    <p class="text-light bg-dark rounded">2023 is the year we moved out into a second Guatemalan
+                      community.
                       It's a huge move on its own, but also a big step towards starting work in other parts of Central
                       America too. Our new partner committee is in Olopa, Guatemala near the Hondoran border. We are
                       working together to start a scholarship program in January and then other projects later in 2024.
                     </p>
                   </div>
                   <div class="carousel-caption d-md-none">
-                    <p class="text-light bg-dark">Expanding into a new location: Welcome Olopa, Guatemala!</p>
+                    <p class="text-light bg-dark rounded">Expanding into a new location: Welcome Olopa, Guatemala!</p>
+                  </div>
+                  {% endif %}
+                  {% endfor %}
+              </div>
+              <div class="carousel-item" data-interval="9000">
+                {% for post in site.posts %}
+                {% if post.title == "Securing flood prone community - Nueva Reforma" %}
+                <a href="{{ post.url }}">
+                  <img src="/images/flood_project.jpeg" class="d-block w-100 rounded"
+                    alt="Securing flood prone community - Nueva Reforma">
+                  <div class="carousel-caption d-none d-md-block">
+                    <p class="text-light bg-dark rounded">Working with Nueva Reforma neighborhood to reduce flooding
+                      risk.</p>
+                  </div>
+                  <div class="carousel-caption d-md-none">
+                    <p class="text-light bg-dark rounded">Working with Nueva Reforma neighborhood to reduce flooding
+                      risk.</p>
                   </div>
                   {% endif %}
                   {% endfor %}
@@ -197,11 +228,13 @@ specific focus during 2020 and 2021."
                   <img src="/images/scholarship_project.jpeg" class="d-block w-100 rounded"
                     alt="Full realization of scholarship program">
                   <div class="carousel-caption d-none d-md-block">
-                    <p class="text-light bg-dark">January 2024 will see full implementation of our scholarship program.
+                    <p class="text-light bg-dark rounded">January 2024 will see full implementation of our scholarship
+                      program.
                     </p>
                   </div>
                   <div class="carousel-caption d-md-none">
-                    <p class="text-light bg-dark">Full implementation of scholarship/financial aid program is almost
+                    <p class="text-light bg-dark rounded">Full implementation of scholarship/financial aid program is
+                      almost
                       here!
                     </p>
                   </div>
